--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="http://http://78.108.216.201:9999" style="width:500px; height: 300px;">
+<embed src="http://78.108.216.201:9999" style="width:500px; height: 300px;">
